--- a/Hello.ipynb
+++ b/Hello.ipynb
@@ -1,22 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "print (\"Hello Capstone Project Course!\")"
+    "<h1 align=center><font size = 5>JUPYTER NOTEBOOK FOR CAPSTONE PROJE</font></h1>"
    ]
   },
   {
@@ -24,7 +12,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "print (\"Hello Capstone Project Course!\")"
+   ]
   }
  ],
  "metadata": {
