--- a/Hello.ipynb
+++ b/Hello.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 5>JUPYTER NOTEBOOK FOR CAPSTONE PROJE</font></h1>"
+    "<h1 align=center><font size = 5>JUPYTER NOTEBOOK FOR CAPSTONE PROJECT</font></h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "print (\"Hello Capstone Project Course!\")"
    ]
   },
   {
@@ -12,11 +31,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "print (\"Hello Capstone Project Course!\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
