--- a/Hello_Capstone.ipynb
+++ b/Hello_Capstone.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 5>JUPYTER NOTEBOOK FOR CAPSTONE PROJECT"
+    "<h1 align=center><font size = 5>Jupyter Notebook for Capstone Project</font></h1>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
