--- a/Hello_Capstone.ipynb
+++ b/Hello_Capstone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align=center><font size = 5>Jupyter Notebook for Capstone Project</font></h1>"
+    "# Jupyter Notebook for Capstone Project <a id=\"4\"></a>"
    ]
   },
   {
