--- a/The Battle of Neighbourhoods_Intro_Week 1.ipynb
+++ b/The Battle of Neighbourhoods_Intro_Week 1.ipynb
@@ -23,7 +23,8 @@
     "* Section 1 Problem Background \n",
     "* Section 2 Business Objective   \n",
     "* Section 3 Data Used  \n",
-    "* Section 4 Methodology"
+    "* Section 4 Methodology\n",
+    "* Section 5 Exploratory Data Analysis"
    ]
   },
   {
@@ -44,9 +45,9 @@
    "metadata": {},
    "source": [
     "**2. Business Objective**  \n",
-    "A friend of mine is keen on opening an Indian restaurant and would like to know the best locality for opening up his restaurant. He'd like to find a suitable place near some MRT station to ensure the best possible footfall.  \n",
+    "My client is keen on opening an Indian restaurant and would like to know the best locality for opening up his restaurant. She'd like to find a suitable place near some MRT station to ensure the best possible footfall  \n",
     "\n",
-    "I agreed to help him to shortlist few suitable locations for opening his restaurant "
+    "In general the **target audience** of this analysis could be any individual or chain restaurants who are keen to open a medium scale Indian restaurant targeting people using public transport"
    ]
   },
   {
@@ -54,22 +55,18 @@
    "metadata": {},
    "source": [
     "**3. Data Used**    \n",
-    "a. Singapore MRT stations location data.        \n",
-    "   The MRT location data was sourced from a kaggle notebook by LY Xuan         \n",
-    "   *(https://www.kaggle.com/yxlee245/singapore-train-station-coordinates)*  \n",
-    "b. Foursquare location data using Foursqaure API  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4.Methodology**  \n",
-    "a. Using the MRT location data and Foursquare API, details of neighbourhood within 500M of each MRT station will be collected  \n",
-    "b. This data will be then clustered using K-Means clustering algorithm to group similar neighbourhoods  \n",
-    "c. Using Foursquare data find the number of Indian restaurants near each MRT station  \n",
-    "e. Combine the results from steps b & c to identify smilar neighbourhoods with less number of Indian restaurants  \n",
-    "f. Make a recommendation based on the results from step e"
+    "**a. Singapore MRT stations location data**       \n",
+    "   The MRT location data was sourced from a kaggle notebook by LY Xuan. *(https://www.kaggle.com/yxlee245/singapore-train-station-coordinates)*    \n",
+    "   **The data consists of**\n",
+    "   1. The name of stations/neighbourhoods, \n",
+    "   2. The type of station (MRT or LRT)\n",
+    "   3. Latitude \n",
+    "   4. Longitude of each station  \n",
+    "     \n",
+    "**b. Foursquare location data using Foursqaure API**  \n",
+    "     Key **features extracted** from this data were  \n",
+    "   1. Top visited places  \n",
+    "   2. Number of Indian restaurants within 500M of MRT stations"
    ]
   },
   {
