--- a/The Battle of Neighbourhoods_Intro_Week 1.ipynb
+++ b/The Battle of Neighbourhoods_Intro_Week 1.ipynb
@@ -22,9 +22,7 @@
     "**Table of Contents**\n",
     "* Section 1 Problem Background \n",
     "* Section 2 Business Objective   \n",
-    "* Section 3 Data Used  \n",
-    "* Section 4 Methodology\n",
-    "* Section 5 Exploratory Data Analysis"
+    "* Section 3 Data Used  "
    ]
   },
   {
