--- a/The Battle of Neighbourhoods_Intro_Week 2.ipynb
+++ b/The Battle of Neighbourhoods_Intro_Week 2.ipynb
@@ -24,7 +24,9 @@
     "* Section 2 Business Objective   \n",
     "* Section 3 Data Used  \n",
     "* Section 4 Methodology\n",
-    "* Section 5 Exploratory Data Analysis"
+    "* Section 5 Exploratory Data Analysis\n",
+    "* Section 6 Results\n",
+    "* Section 7 Discussions"
    ]
   },
   {
@@ -85,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**4.Exploratory Data Analysis**  \n",
+    "**5.Exploratory Data Analysis**  \n",
     "A preliminary analysis of the data MRT location data was performed to see the content structure. The data identifies both MRT (metro rail stations) and LRT (light rail stations) separately. This was useful as it helps to easily classify the neighbourhoods as most of the LRT stations are located in the sub-urban housing localities  \n",
     "  \n",
     "While exploring the Foursquare data, I observed that most Indian restaurants are located approx. 1KM away from the MRT stations. However, as the business objective is to benefit from the MRT passengers, the search perimeter was fixed as 500M. Further analysis showed that there out of the total 157 stations, there are only 17 stations with atleast one Indian restaurant within 500M of an MRT station  \n",
@@ -102,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.Results**  \n",
+    "**6.Results**  \n",
     "\n",
     "It was found that Indian restaurants within 500M of MRT are located only in Cluster 3 (medium sized towns) and Cluster 5 (downtown & nearby suburbs).  Most number of Indian restaurants are located near Little India, Jelan Besar and Farrer Park MRT stations and all there of them fall in Cluster 5.  However, other stations in cluster 5 like Commonwealth, Buona Vista, Rocher & Beauty World had only less than 5 Indian restaurants within 500M.   \n",
     "All stations in cluster 3, had only 2 Indian restaurants within it's 500M perimeter"
@@ -112,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**6.Discussions**  \n",
+    "**7.Discussions**  \n",
     "\n",
     "Based on the analysis results, my recommendation of locations are  \n",
     "**a. Buona Vista**- As an MRT interchange and with it's high proximity to Science Park (a business hub) this station \n",
